fixed grid ratios, probably will change spacing more though

--- a/src/components/mynt-page/mynt-page.css
+++ b/src/components/mynt-page/mynt-page.css
@@ -4,5 +4,5 @@
   
 }
 .-main {
-  --ion-grid-column-padding: 100px;
+  --ion-grid-column-padding: 0px;
 }
